--- a/src/components/code/code-js/js-theory/pages/elem-eventloop.html
+++ b/src/components/code/code-js/js-theory/pages/elem-eventloop.html
@@ -25,6 +25,8 @@
 <article class="article">
   <div class="anchor" id="links"></div>
   <h2>links</h2>
+
+  <p><a href="https://coderoad.ru/25915634/%D0%A0%D0%B0%D0%B7%D0%BD%D0%B8%D1%86%D0%B0-%D0%BC%D0%B5%D0%B6%D0%B4%D1%83-%D0%BC%D0%B8%D0%BA%D1%80%D0%BE%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B5%D0%B9-%D0%B8-%D0%BC%D0%B0%D0%BA%D1%80%D0%BE%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B5%D0%B9-%D0%B2-%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%B5-%D1%86%D0%B8%D0%BA%D0%BB%D0%B0-%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B9">coderoad.ru</a> Разница между микрозадачей и макрозадачей в контексте цикла событий</p>
 </article>
 
 
@@ -48,11 +50,13 @@
     <li><code>Promise callback</code></li>
     <li><code>async functions</code></li>
     <li><code>queueMicrotask</code></li>
+    <li><code>MutationObserver</code></li>
   </ol>
   <p>Макрозадачи:</p>
   <ol>
     <li><code>setTimeout()</code></li>
     <li><code>setInterval()</code></li>
     <li><code>setImmediate()</code></li>
+    <li><code>requestAnimationFrame()</code></li>
   </ol>
 </article>
