--- a/src/components/code/code-js/js-webapi/pages/elem-storage.html
+++ b/src/components/code/code-js/js-webapi/pages/elem-storage.html
@@ -1,36 +1,23 @@
-<h1>Web Storage API</h1>
-
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
-
-<!-- Содержание -->
-<div class="article article__content">
-
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">about</a></p>
-    <p><a href="#interface">Интерфейсы Web Storage</a></p>
-    <p><a href="#storage">Интерфейс Storage</a></p>
-    <p><a href="#local">localStorage</a></p>
-    <p><a href="#session">sessionStorage</a></p>
-  </div>
-
-</div>
-
+<h1>Web Storage</h1>
 
 <!-- links -->
 <article class="article">
-  <div class="anchor" id="links"></div>
-  <h2>links</h2>
+  <h3>Ссылки</h3>
   <p><a href="https://www.dev-notes.ru/articles/frontend/use-cases-for-htmls-web-storage-API/">Варианты использования Web Storage API в HTML</a> (2023-07-22)</p>
   <p><a href="https://doka.guide/tools/browsers-storages/">doka.guide/tools/browsers-storages</a> Хранение данных в браузере (2023-07-22)</p>
 
-  <h3>habr</h3>
+  <h3>Ссылки на habr</h3>
   <p><a href="https://habr.com/ru/articles/496348/">Web Storage API: примеры использования</a> (2020-04-09)</p>
 </article>
+
+<!-- Содержание -->
+<div class="article article__content">
+  <p><a href="#about">about</a></p>
+  <p><a href="#interface">Интерфейсы Web Storage</a></p>
+  <p><a href="#storage">Интерфейс Storage</a></p>
+  <p><a href="#local">localStorage</a></p>
+  <p><a href="#session">sessionStorage</a></p>
+</div>
 
 
 <!-- about -->
