--- a/src/components/code/code-js/js-webapi/pages/elem-xhr.html
+++ b/src/components/code/code-js/js-webapi/pages/elem-xhr.html
@@ -1,4 +1,4 @@
-<h1>API XMLHttpRequest</h1>
+<h1>XMLHttpRequest (window.XMLHttpRequest)</h1>
 
 <article class="article">
   <p>XMLHttpRequest это API, который предоставляет клиенту функциональность для обмена данными между клиентом и сервером. Данный API предоставляет простой способ получения данных по ссылке без перезагрузки страницы. Это позволяет обновлять только часть веб-страницы не прерывая пользователя. XMLHttpRequest используется в AJAX запросах и особенно в single-page приложениях.</p>
