--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -2,18 +2,23 @@
 
 <!-- Заголовок -->
 <div class="article">
-  <div class="anchor" id="contents"></div>
+  <div class="anchor" id="content"></div>
   <h2>Содержание</h2>
-
-  <!-- Содержание -->
-  <div class="article__contents">
-    <a href="#rs-test" class="contents__link">RS Auto Test</a>
-    <a href="#dsr-exam" class="contents__link">DSR Exam</a>
-    <a href="#neoflex" class="contents__link">Neoflex</a>
-    <a href="#quiz" class="contents__link">quiz</a>
-    <a href="#rain" class="contents__link">Дождь</a>
-  </div>
 </div>
+
+<!-- Содержание -->
+<div class="article article__content">
+
+  <div>
+    <p><a href="#rs-test">RS Auto Test</a></p>
+    <p><a href="#dsr-exam">DSR Exam</a></p>
+    <p><a href="#neoflex">Neoflex</a></p>
+    <p><a href="#hh">hh.ru</a></p>
+    <p><a href="#quiz">quiz</a></p>
+  </div>
+
+</div>
+
 
 <!-- rs-test -->
 <article class="article">
@@ -62,7 +67,9 @@
     <li><a href="rs-test/rs-test-webstorage.html" class="js-rs-test">[St2] Web Storage</a> (88 из 100)</li>
     <li><a href="rs-test/rs-test-fp.html" class="js-rs-test">[St2] Functional Programming</a> (85 из 100)</li>
     <li><a href="rs-test/rs-test-asyncjs.html" class="js-rs-test">[St2] Async JS Test</a> (79 из 100)</li>
-    <li><a href="rs-test/rs-test-websecurity.html" class="js-rs-test">[St2] Web Security</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-websecurity.html" class="js-rs-test">[St2] Web Security</a> (79 из 100)</li>
+    <li><a href="rs-test/rs-test-restful.html" class="js-rs-test">[St2] RESTful API Style</a> (85 из 100)</li>
+    <li><a href="rs-test/rs-test-eventloop.html" class="js-rs-test">[St2] Event Loop & Animation</a> (0 из 100)</li>
   </ol>
 </article>
 
@@ -84,6 +91,16 @@
 </article>
 
 
+<!-- Тесты на hh.ru -->
+<article class="article">
+  <div class="anchor" id="hh"></div>
+  <h2>Тесты на hh.ru</h2>
+  <p><a href="hh/hh-git1.html" class="hh-test">[hh.ru] Git начальный уровень</a> (8 из 10)</p>
+  <p><a href="hh/hh-git2.html" class="hh-test">[hh.ru] Git продвинутый уровень</a> (8 из 12)</p>
+  <p><a href="hh/hh-eng.html" class="hh-test">[hh.ru] Английский язык</a> (10 из 14)</p>
+</article>
+
+
 <!-- quiz -->
 <article class="article">
   <div class="anchor" id="quiz"></div>
@@ -95,11 +112,4 @@
   <p><a href="https://ku13shov.github.io/quiz/">Веб-приложение Frontend Quiz</a> Это приложение предоставляет
     фронтенд разработчикам возможность проверить свои знания в области HTML, CSS, JavaScript и React</p>
   <p><a href="https://www.jschallenger.com/overview">jschallenger.com</a></p>
-</article>
-
-<!-- rain -->
-<article class="article">
-  <div class="anchor" id="rain"></div>
-  <h2>Дождь на canvas</h2>
-  <canvas id="playground-rain" class="playground" height="600"></canvas>
 </article>
