--- a/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
@@ -280,6 +280,41 @@
 </article>
 
 
+<!-- Week 7 -->
+<article class="article">
+  <div class="anchor" id="week7"></div>
+  <h3>Неделя #7(26 марта 2024)</h3>
+  <ul>
+    <li>Modules:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/eventloop-animation">Module: "Event Loop & Animation"</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/restful-api">Module: RESTful API Style</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md">CoreJS Interview #1</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/tasks/async-race">Project Async Race</a>
+        </li>
+     </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li>[St2] Event Loop & Animation</li>
+        <li>[St2] RESTful API Style</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+
+
 <!-- video -->
 <article class="article">
   <div class="anchor" id="video"></div>
