--- a/src/components/front/front-edu/pages/neoflex/ef-test1.html
+++ b/src/components/front/front-edu/pages/neoflex/ef-test1.html
@@ -115,7 +115,7 @@
 
 
 <article class="article">
-  <h3>10. Whilee the stress of a constant stream of heavy trucks did not actually cause the bridge cables to _______ , it certainly contributed to their deterioration</h3>
+  <h3>10. While the stress of a constant stream of heavy trucks did not actually cause the bridge cables to _______ , it certainly contributed to their deterioration</h3>
   <ul>
     <li>destroy</li>
     <li>crush</li>
