--- a/src/components/front/front-net/pages/elem-api.html
+++ b/src/components/front/front-net/pages/elem-api.html
@@ -70,6 +70,25 @@
   <div class="anchor" id="type"></div>
   <h2>Типы API</h2>
 
+  <h3>Типы API по аудитории</h3>
+  <ol>
+    <li>
+      <h3>Public API</h3>
+      <p>Публичные API также могут называться внешними или открытыми API. Эти API доступны для использования любым человеком практически без ограничений, хотя многие из них требуют регистрации и аутентификации, часто с помощью легкодоступного ключа API.</p>
+    </li>
+    <li>
+      <h3>Open API</h3>
+      <p>Многие общедоступные API соответствуют стандарту OpenAPI. Стандарт OpenAPI , ранее известный как Swagger, представляет собой спецификацию для написания общедоступного API с рекомендациями по таким деталям, как соглашения об именах конечных точек, форматы данных и сообщения об ошибках.</p>
+    </li>
+    <li>
+      <h3>Private API</h3>
+      <p>Между тем, частные или внутренние API предназначены для использования внутри закрытой группы потребителей API, обычно это частная компания или учреждение. Чтобы взаимодействовать с данными в частном API, разработчику обычно необходимо активно предоставить разрешение на доступ к нему, поскольку данные и функции, доступные через API, являются собственностью компании.</p>
+    </li>
+    <li>
+      <h3>Partner API</h3>
+      <p>Партнерские API существуют где-то между общедоступными и частными API. Они часто служат для обмена данными между двумя компаниями или организациями для конкретной деловой цели, обеспечивая при этом строгую защиту конфиденциальности.</p>
+    </li>
+  </ol>
   <p>Существует несколько типов API в зависимости от того, каким образом они предоставляют доступ к функциональности и данным.</p>
 
   <ol>
