--- a/src/components/front/front-net/pages/elem-osi-model.html
+++ b/src/components/front/front-net/pages/elem-osi-model.html
@@ -66,6 +66,7 @@
   <p>Самый известный протокол на физическом уровне — Ethernet. Он описывает, как сигналы кодируются и передаются по проводам. Кроме него есть Bluetooth, Wi-Fi и ИК-порт, которые также содержат инструкции для передачи данных.</p>
 
   <p>Устройства физического уровня — концентраторы и репитеры. Они работают с физическим сигналом «втупую» и не вникают в его логику: получили данные — передали их дальше по проводу.</p>
+  <p>Примеры - USB, RJ</p>
 </article>
 
 
@@ -95,6 +96,7 @@
   <p>Первый подуровень нужен для взаимодействия с верхним уровнем, сетевым, а второй — для взаимодействия с нижним, физическим.</p>
 
   <p>Устройства канального уровня — коммутаторы и мосты. Они нужны, чтобы передавать фреймы нужному адресату. Протоколы канального уровня — PPP, CDP.</p>
+  <p>Примеры - PPP, IEEE 802.22, Ethernet, DSL, ARP, сетевая карта.</p>
 </article>
 
 
@@ -110,6 +112,7 @@
   <p>Данные на сетевом уровне представляются в виде пакетов. Такие пакеты похожи на фреймы из канального уровня, но используют другие адреса получателя и отправителя — IP-адреса.</p>
 
   <p>Чтобы получить IP-адрес обоих устройств (отправителя и получателя), существует протокол ARP (address resolution protocol). Он умеет конвертировать MAC- в IP-адрес и наоборот.</p>
+  <p>Примеры - IPv4, IPv6, IPsec, AppleTalk, ICMP</p>
 </article>
 
 
@@ -146,6 +149,7 @@
   <p>Сеансовый уровень управляет соединениями, или сессиями. Типичный пример — звонок по Skype или Zoom. Когда вы звоните другому человеку, между вашими компьютерами устанавливается соединение, по которому передаются аудио и видео. Если такое соединение разорвать, то и ваш звонок прервётся.</p>
 
   <p>На сеансовом уровне очень важно, чтобы соединение правильно установилось и поддерживалось. То есть механизмы протоколов должны проверить, что у обоих собеседников есть нужные кодеки и сигнал между устройствами присутствует.</p>
+  <p>Примеры - RPC, PAP, L2TP, gRPC</p>
 </article>
 
 
@@ -157,6 +161,7 @@
   <p>На этом уровне происходит преобразование форматов данных — их кодирование и сжатие. Например, полученные данные могут превратиться в GIF- или MP4-файл. То же самое происходит и в обратном порядке: когда пользователь отправляет файл другому человеку, данные сначала конвертируются в биты и сжимаются, а потом уже передаются на транспортный уровень.</p>
 
   <p>Помимо кодировки и сжатия на уровне представления, данные могут шифроваться — если, конечно, это необходимо.</p>
+  <p>Примеры - ASCII, EBCDIC, SSL, gzip.</p>
 </article>
 
 
@@ -169,7 +174,7 @@
 
   <p>Прикладной уровень похож на некий графический интерфейс для всей модели OSI — с его помощью пользователь взаимодействует с другими уровнями, даже не подозревая об этом. Этот интерфейс называется сетевым.</p>
 
-  <p>Самые популярные из сетевых интерфейсов — это HTTP, HTTPS, FTP и SMTP. А «устройства» здесь — это уже программы: Zoom, Telegram, браузеры.</p>
+  <p>Самые популярные из сетевых интерфейсов — это HTTP, HTTPS, FTP, POP3, SMTP, WebSocket. А «устройства» здесь — это уже программы: Zoom, Telegram, браузеры.</p>
 </article>
 
 
