--- a/src/components/code/code-js/js-practice/pages/elem-task.html
+++ b/src/components/code/code-js/js-practice/pages/elem-task.html
@@ -1,9 +1,5 @@
 <h1>Задачи на Javascript</h1>
 
-<article class="article">
-  <div id="link-to-eventloop" class="btn-back">назад</div>
-</article>
-
 <!-- Заголовок -->
 <div class="article">
   <div class="anchor" id="content"></div>
@@ -190,4 +186,25 @@ console.log('5');</pre>
 5
 4
 1</pre>
+
+  <h3>Задача 3. Что будет в консоли?</h3>
+<pre>console.log('script start');
+
+setTimeout(function() {
+  console.log('setTimeout');
+}, 0);
+
+Promise.resolve().then(function() {
+  console.log('promise1');
+}).then(function() {
+  console.log('promise2');
+});
+
+console.log('script end');</pre>
+  <p>Ответ</p>
+<pre>script start
+script end
+promise1
+promise2
+setTimeout</pre>
 </article>
