--- a/src/components/front/front-net/pages/elem-rest.html
+++ b/src/components/front/front-net/pages/elem-rest.html
@@ -30,6 +30,7 @@
 
   <h3>Статьи на habr</h3>
   <p><a href="https://habr.com/ru/articles/768752/">habr.com/ru/articles/768752</a> API от А до Я (теория и практика) (2023.10.20)</p>
+  <p><a href="https://habr.com/ru/articles/483202/">habr.com/ru/articles/483202</a> Введение в REST API — RESTful веб-сервисы (2020.01.10)</p>
 </article>
 
 
